[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_bydfi"
version = "0.1.0"
description = "BYDFi exchange plugin for bt_api"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "cloudQuant", email = "yunjinqi@gmail.com"}]
keywords = ["bt_api", "bydfi", "exchange", "trading"]
classifiers = ["License :: OSI Approved :: MIT License"]
dependencies = ["bt_api_base>=0.1.0"]

[project.urls]
Homepage = "https://github.com/cloudQuant/bt_api"
Documentation = "https://cloudquant.github.io/bt_api/"

[tool.setuptools.packages.find]
where = ["src"]