[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bt_api_bydfi"
version = "0.1.1"
description = "BYDFi exchange plugin for bt_api framework"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "cloudQuant", email = "yunjinqi@gmail.com"},
]
keywords = [
    "bt_api",
    "bydfi",
    "exchange",
    "trading",
    "crypto",
    "spot",
    "btc",
    "ethereum",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "bt_api_base>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/cloudQuant/bt_api_bydfi"
Documentation = "https://bt-api-bydfi.readthedocs.io/"
Repository = "https://github.com/cloudQuant/bt_api_bydfi"
Issues = "https://github.com/cloudQuant/bt_api_bydfi/issues"
Changelog = "https://github.com/cloudQuant/bt_api_bydfi/releases"
"CI" = "https://github.com/cloudQuant/bt_api_bydfi/actions"
"PyPI" = "https://pypi.org/project/bt_api_bydfi/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "UP", "B", "C4", "T20", "YTT",
    "ASYNC", "BLE", "COM", "DTZ", "EM", "ISC", "ICN", "G",
    "PIE", "T10", "DJ", "S", "N", "RUF100", "PERF", "PIE790",
]
ignore = [
    "E501", "B008", "N802", "N803", "S101",
    "G004", "BLE001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S106", "S105", "S311", "E402", "PERF401", "N806", "S108"]
"examples/**" = ["S106", "S105", "S311", "E402", "PERF401", "N806", "S108"]
"scripts/**" = ["S106", "S105", "S311", "E402", "PERF401", "N806", "S108"]



[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "kline: Kline/bar data tests",
    "orderbook: Orderbook/depth data tests",
    "ticker: Public ticker data tests",
    "network: Tests requiring network access",
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require external services)",
]

